# waggle-mail

./: .gitignore  PR_DESCRIPTION.md  README.md  ROADMAP.md  SKILL.md  pyproject.toml  waggle.py
.github/workflows/: tests.yml
tests/: __init__.py  conftest.py  test_build_cfg.py  test_check.py  test_cli_json.py  test_dedup_guard.py  test_flag_management.py  test_flynn_scenario.py  test_heading_levels.py  test_html_entities.py  test_mark_read.py  test_reply_guard.py  test_sent_folder.py  test_skip_quote_fetch.py  test_strikethrough.py  test_threading.py
waggle_mail.egg-info/: PKG-INFO
