[build-system]
requires = ["setuptools>=61,<69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "waggle-mail"
version = "1.9.0"
description = "Full email client for AI agents: send, list, read, reply, move, download attachments. IMAP + SMTP, Markdown to HTML."
readme = "README.md"
license = {text = "MIT"}
authors = [{ name = "Sam Cox", email = "sam@jasonacox.com" }]
keywords = ["email", "smtp", "markdown", "ai", "agents", "multipart"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications :: Email",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
rich = ["markdown>=3.4", "pygments>=2.14"]

[project.urls]
Homepage = "https://github.com/jasonacox-sam/waggle-mail"
Repository = "https://github.com/jasonacox-sam/waggle-mail"
Issues = "https://github.com/jasonacox-sam/waggle-mail/issues"

[project.scripts]
waggle = "waggle:cli_main"

[tool.setuptools]
py-modules = ["waggle"]
